kube/deployment-flarum.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flarum
  name: flarum
  namespace: flarum
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app: flarum
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: flarum
    spec:
      automountServiceAccountToken: true
      containers:
      - image: localhost/flarum:v1.8.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: flarum
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          failureThreshold: 3
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        resources: {}
        startupProbe:
          failureThreshold: 30
          httpGet:
            path: /
            port: http
            scheme: HTTP
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
        volumeMounts:
        - mountPath: /opt/app-root/src/public/assets
          name: assets
        - mountPath: /opt/app-root/src/storage
          name: storage
        - mountPath: /opt/app-root/src/config.php
          name: config
          subPath: config
      dnsPolicy: ClusterFirst
      enableServiceLinks: true
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      serviceAccount: default
      serviceAccountName: default
      terminationGracePeriodSeconds: 30
      volumes:
      - name: assets
        persistentVolumeClaim:
          claimName: flarum-assets
      - name: storage
        persistentVolumeClaim:
          claimName: flarum-storage
      - name: config
        configMap:
          defaultMode: 420
          name: flarum
