kube/svc-flarum.yaml
---

apiVersion: v1
kind: Service
metadata:
  name: flarum
  namespace: flarum
  labels:
    app: flarum
spec:
  type: LoadBalancer
  selector:
    app: flarum
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP
